# remi-cat

./: .env  .env.example  .gitignore  Agent.md  Cargo.toml  Dockerfile  Dockerfile.sandbox  LICENSE  README.md  Soul.md  deploy.sh  docker-compose.yml  mgmt_identity.json  owner.json  setup.sh
.github/workflows/: release.yml
.remi-cat/agents/: coder.md  data_analyst.md  default.md  explorer.md  finance_analyst.md  macro_strategist.md  remi_diagnostics.md  tech_analyst.md  writer.md
.remi-cat/models/: deepseek-v4-flash.yaml  deepseek-v4-pro.yaml  default.yaml  glm-5.2.yaml  glm-5v-turbo.yaml  gpt-4o.yaml  kimi-k2.6.yaml  kimi-k2.7-code.yaml  mimo-v2.5-pro.yaml  mimo-v2.5.yaml
.remi-cat/workflows/: plan-code-test.json
crates/admin-ui/: Cargo.toml
crates/admin-ui/src/: api.rs  main.rs  noise_client.rs  registry.rs
crates/admin-ui/src/static/: index.html
crates/agent/: Cargo.toml
crates/agent/src/: main.rs  rpc_client.rs
crates/bot-core/: Cargo.toml
crates/bot-core/src/: agent.rs  approval.rs  events.rs  goal.rs  hooks.rs  im_tools.rs  lib.rs  markdown_runtime.rs  model.rs  model_profile.rs  model_usage.rs  profile.rs  remi_skill.rs  sandbox.rs  search.rs  search_query.rs  supervisor.rs  supervisor_workflow.rs  token_usage.rs  tool.rs  tool_pretty.rs  tool_tasks.rs  tools.rs  user_question.rs
crates/bot-core/src/acp/: backend.rs  client_tools.rs  mod.rs  tools.rs
crates/bot-core/src/memory/: blob.rs  compress.rs  mod.rs  store.rs  tier.rs  tool.rs
crates/bot-core/src/runtime/: approval_markers.rs  environment_context.rs  memory_runtime.rs  mod.rs  model_provider.rs  partial_turn.rs  prompting.rs  supervisor_agent.rs  tool_registry.rs  tool_status.rs
crates/bot-core/src/sandbox/: bash.rs  mod.rs  path.rs
crates/bot-core/src/skill/: mod.rs  store.rs  tools.rs
crates/bot-core/src/todo/: backend.rs  mod.rs  tools.rs
crates/bot-core/src/tools/: bash.rs  mod.rs  redactor.rs  ssh.rs  utility.rs
crates/bot-core/src/trigger/: backend.rs  mod.rs  skill.rs  tools.rs
crates/bot-core/workflows/: goal.json
crates/bot-runtime-core/: Cargo.toml  README.md
crates/bot-runtime-core/src/: agent.rs  dynamic_tool.rs  events.rs  lib.rs  loop_driver.rs  profile.rs
crates/bot-runtime-core/tests/: markdown_runtime.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: acp_bindings.rs  command.rs  docker.rs  local_agent.rs  local_cli.rs  main.rs  mgmt_server.rs  reply_transport.rs  restart.rs  rpc_server.rs  secret_store.rs  trigger_scheduler.rs  volume_store.rs
crates/im-feishu/: Cargo.toml
crates/im-feishu/src/: client.rs  frame.rs  lib.rs  streaming.rs
crates/im-gateway/: Cargo.toml
crates/im-gateway/src/: lib.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
crates/mgmt-api/: Cargo.toml
crates/mgmt-api/src/: lib.rs
crates/proto/: Cargo.toml  build.rs  public_api.proto  trigger_internal.proto
crates/proto/proto/: remi.proto
crates/proto/src/: lib.rs
crates/remi-client-sdk/: Cargo.toml  build.rs
crates/remi-client-sdk/benches/: sdk_agent_tools.rs
crates/remi-client-sdk/proto/: remi_options.proto
crates/remi-client-sdk/src/: action_builtin.rs  app_keys_client.rs  auth.rs  chat_agent.rs  chat_client.rs  chat_runtime.rs  chat_types.rs  context_prompt.rs  crdt_cache.rs  crdt_sync.rs  external_tool_handler.rs  external_tool_schema.rs  external_tools.rs  lib.rs  local_wasm.rs  location_service.rs  notification_events.rs  profile.rs  push_tokens.rs  quickjs.rs  realtime.rs  runtime.rs  storage.rs  things_client.rs  things_crdt.rs  things_handlers.rs  things_sync.rs  transport.rs  trigger_client.rs  types.rs  uri_resolver.rs  url_handlers.rs
crates/remi-client-sdk/src/runtime/: path_tools.rs
crates/remi-client-sdk/tests/: live_app_key_smoke.rs  things_v3_delete_semantics.rs  trigger_rule_published.rs  virtual_fs_tools.rs
crates/remi-things-crdt/src/: compaction.rs  extract.rs  lib.rs  markdown.rs  materialize.rs  ops.rs  schema.rs  view.rs
crates/remi-things-crdt/tests/: basic.rs  markdown_concurrent.rs  sync_scenarios.rs
crates/rule-trigger-engine/src/: lib.rs  realworld_tests.rs
crates/user-store/: Cargo.toml
crates/user-store/src/: lib.rs
scripts/: eval_longmemeval.py
src/: acp_agent.rs  app.rs  application.rs  cli.rs  codex_acp_adapter.rs  config.rs  host_admin.rs  instance_profile.rs  lib.rs  local_trigger.rs  local_trigger_scheduler.rs  main.rs  model_input_store.rs  profile_command.rs  runtime_config.rs  secret_store.rs  session.rs  telemetry.rs  tui_app.rs  tui_form.rs  tui_markdown.rs  tui_text.rs  tui_theme.rs  web_chat.rs  workspace_files.rs
src/channel/: cli.rs  feishu.rs  mod.rs  tui.rs  web.rs
src/channel/feishu/: actions.rs  bridge.rs  format.rs  reply_stream.rs  routing.rs  settings.rs  sub_session.rs
src/command/: doctor.rs  feedback.rs  feishu.rs  hooks.rs  mod.rs  secrets.rs  setup.rs  update.rs
src/core/: chat.rs  mod.rs  sub_session.rs
src/tui_app/: components.rs  composer.rs  render.rs
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  api.ts  commands.test.ts  commands.ts  runtime.tsx  styles.css
