[package]
name = "remi-cat"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/another-s347/remi-cat"

[workspace]
members = [
    ".",
    "crates/im-gateway",
    "crates/im-feishu",
    "crates/matcher",
    "crates/user-store",
    "crates/bot-core",
    "crates/mgmt-api",
    "crates/admin-ui",
    "crates/remi-client-sdk",
    "crates/remi-things-crdt",
    "crates/rule-trigger-engine",
]
default-members = ["."]
resolver = "2"

[dependencies]
bot-core = { path = "crates/bot-core" }
im-feishu = { path = "crates/im-feishu" }
user-store = { path = "crates/user-store" }
remi-agentloop = { git = "https://github.com/another-s347/remi-agentloop.git", rev = "72842cd95b3300d9da9e23c07579fc07ab4e3822", features = [
    "http-client",
    "tracing-langsmith",
] }

anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
semver = "1"
sentry = { version = "0.47", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
