[package]
name = "remi-cat"
version = "0.2.11"
description = "A multi-agent AI assistant with IM platform support, TUI, and web interface"
edition = "2021"
license = "MIT"
repository = "https://github.com/another-s347/remi-cat"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ name }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ name }/{ bin }{ binary-ext }"

[workspace]
members = [
    ".",
    "crates/im-feishu",
    "crates/user-store",
    "crates/bot-runtime-core",
    "crates/bot-core",
    "crates/remi-client-sdk",
    "crates/remi-things-crdt",
    "crates/rule-trigger-engine",
]
default-members = ["."]
resolver = "2"

[features]
default = ["secure-storage"]
secure-storage = ["dep:keyring"]

[dependencies]
bot-core = { path = "crates/bot-core" }
im-feishu = { path = "crates/im-feishu" }
remi-client-sdk = { path = "crates/remi-client-sdk" }
remi-things-crdt = { path = "crates/remi-things-crdt" }
user-store = { path = "crates/user-store" }
remi-agentloop = { git = "https://github.com/another-s347/remi-agentloop.git", rev = "72842cd95b3300d9da9e23c07579fc07ab4e3822", features = [
    "http-client",
    "tracing-langsmith",
] }

anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["yaml"] }
futures = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
semver = "1"
sentry = { version = "0.47", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
    "rustls",
    "tracing",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"], optional = true }
