[package]
name = "remi-cat"
version = "0.2.15"
description = "A multi-agent AI assistant with IM platform support, TUI, and web interface"
edition = "2021"
license = "MIT"
repository = "https://github.com/another-s347/remi-cat"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ name }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ name }/{ bin }{ binary-ext }"

[workspace]
members = [
    ".",
    "crates/im-feishu",
    "crates/user-store",
    "crates/bot-runtime-core",
    "crates/bot-core",
]
exclude = [
    "vendor/remi-agentloop",
    "vendor/remi-agentloop/*",
    "vendor/remi-agentloop/examples/*",
]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/another-s347/remi-agentloop"

[workspace.dependencies]
futures = "0.3"
async-stream = "0.3"
futures-timer = "3"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v5"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
axum = { version = "0.7", features = ["json"] }
tokio-util = { version = "0.7" }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-time = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
ratatui = { version = "0.26" }
crossterm = { version = "0.27", features = ["event-stream"] }
toml = "0.8"
base64 = "0.22"
wit-bindgen = "0.53"
wasmtime = { version = "42", default-features = false, features = [
    "component-model",
    "async",
    "all-arch",
] }
wasmtime-wasi = "42"

[features]
default = ["secure-storage"]
secure-storage = ["dep:keyring"]

[dependencies]
bot-core = { path = "crates/bot-core" }
im-feishu = { path = "crates/im-feishu" }
user-store = { path = "crates/user-store" }
agent-client-protocol = { version = "1.0.1", features = ["unstable_elicitation"] }
remi-agentloop = { path = "vendor/remi-agentloop/remi-agentloop", features = [
    "http-client",
    "tracing-langsmith",
] }

anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["yaml"] }
futures = "0.3"
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
semver = "1"
sentry = { version = "0.47", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
    "rustls",
    "tracing",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"], optional = true }

[dev-dependencies]
tempfile = "3"
