[package]
name = "remi-admin"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "remi-admin"
path = "src/main.rs"

[dependencies]
mgmt-api = { path = "../mgmt-api" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Noise_XX encrypted WebSocket (client)
tokio-tungstenite = "0.23"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4"] }
dirs = "5"
