[package]
name = "bot-core"
version = "0.1.7"
edition = "2021"

[dependencies]
remi-agentloop = { git = "https://github.com/another-s347/remi-agentloop.git", branch = "main", features = [
    "http-client",
    "tracing-langsmith",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
aho-corasick = "1"
html2md = "0.2.15"
remi-client-sdk = { git = "https://github.com/another-s347/remi-sdk.git", package = "remi-client-sdk", branch = "main" }
remi-things-crdt = { git = "https://github.com/another-s347/remi-sdk.git", package = "remi-things-crdt", branch = "main" }
