[package]
name = "bot-core"
version = "0.1.7"
edition = "2021"

[lib]
doctest = false

[dependencies]
remi-agentloop = { git = "https://github.com/another-s347/remi-agentloop.git", rev = "72842cd95b3300d9da9e23c07579fc07ab4e3822", features = [
    "http-client",
    "tracing-langsmith",
] }
remi-agentloop-deepagent = { git = "https://github.com/another-s347/remi-agentloop.git", package = "remi-agentloop-deepagent", rev = "72842cd95b3300d9da9e23c07579fc07ab4e3822" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
base64 = "0.22"
regex = "1"
sha2 = "0.10"
shlex = "1.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
aho-corasick = "1"
html2md = "0.2.15"
remi-client-sdk = { path = "../remi-client-sdk" }
remi-things-crdt = { path = "../remi-things-crdt" }

[dev-dependencies]
tempfile = "3"
