[package]
name = "bot-core"
version = "0.1.7"
edition = "2021"

[lib]
doctest = false

[dependencies]
bot-runtime-core = { path = "../bot-runtime-core" }
agent-client-protocol = "1.0.1"
remi-agentloop = { git = "https://github.com/another-s347/remi-agentloop.git", rev = "c1c20c664bbfaba06bb4eaf653cfdb1e6e1099b5", features = [
    "tracing-langsmith",
] }
remi-agentloop-deepagent = { git = "https://github.com/another-s347/remi-agentloop.git", package = "remi-agentloop-deepagent", rev = "c1c20c664bbfaba06bb4eaf653cfdb1e6e1099b5" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
base64 = "0.22"
regex = "1"
sha2 = "0.10"
shlex = "1.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
aho-corasick = "1"
html2md = "0.2.15"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
