[package]
name = "bot-runtime-core"
version = "0.1.0"
edition = "2021"
description = "Reusable runtime primitives for markdown-defined agents with injected tools"
license = "MIT"
repository = "https://github.com/another-s347/remi-cat"
readme = "README.md"
publish = false

[lib]
doctest = false

[dependencies]
remi-agentloop = { path = "../../vendor/remi-agentloop/remi-agentloop", features = [
    "http-client",
    "tracing-langsmith",
] }
anyhow = "1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
